--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html>
-   <head>
-     <title>My First Web Page</title>
-   </head>
-  <body>
-    <h1>Welcome to my first web page</h1>
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt et sem ut molestie. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin ligula libero, malesuada non dolor sit amet, euismod placerat quam. Nullam semper quis metus vitae facilisis. Mauris vel nisi nec libero malesuada bibendum. Suspendisse lacinia orci vel lorem accumsan, non tempor est blandit. Suspendisse nec dolor enim. Donec sed gravida purus, at auctor elit. Aenean sit amet enim sed odio rhoncus tincidunt in eu mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non nunc vel libero maximus ultricies vitae quis nisl. Etiam vitae risus varius, rutrum lectus ut, varius lacus. Aliquam ut elit eget nunc tempor laoreet a et nisl.</p>
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt et sem ut molestie. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin ligula libero, malesuada non dolor sit amet, euismod placerat quam. Nullam semper quis metus vitae facilisis. Mauris vel nisi nec libero malesuada bibendum. Suspendisse lacinia orci vel lorem accumsan, non tempor est blandit. Suspendisse nec dolor enim. Donec sed gravida purus, at auctor elit. Aenean sit amet enim sed odio rhoncus tincidunt in eu mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non nunc vel libero maximus ultricies vitae quis nisl. Etiam vitae risus varius, rutrum lectus ut, varius lacus. Aliquam ut elit eget nunc tempor laoreet a et nisl.</p>
-  </body>
+<head>
+	
+	<title>Quick Start - Leaflet</title>
+
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+
+
+	
+</head>
+<body>
+
+
+
+<div id="mapid" style="width: 600px; height: 400px;"></div>
+<script>
+
+	var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+
+	L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+		maxZoom: 18,
+		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
+			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+		id: 'mapbox/streets-v11',
+		tileSize: 512,
+		zoomOffset: -1
+	}).addTo(mymap);
+
+</script>
+
+
+
+</body>
 </html>
