--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 		tileSize: 512,
 		zoomOffset: -1
 	}).addTo(mymap);
+	
+	var marker = L.marker([51.14471, -2.69866]).addTo(mymap);   
+	marker.bindPopup("<img class='popup' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();	
+	
+	var college = L.marker([51.129852, -2.7334955]).addTo(mymap);
+	college.bindPopup("<b>C Block</b><br>Strode College").openPopup();
+	
+	var college1 = L.marker([51.129952, -2.7334955]).addTo(mymap);
 
 </script>
 
