--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	}).addTo(mymap);
 	
 	var marker = L.marker([51.14471, -2.69866]).addTo(mymap);   
-	marker.bindPopup("<img style="width: 300px" src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();	
+	marker.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();	
 	
 	var college = L.marker([51.129852, -2.7334955]).addTo(mymap);
 	college.bindPopup("<b>C Block</b><br>Strode College").openPopup();
