--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
 		zoomOffset: -1
 	}).addTo(mymap);
 	
+	var google = L.tileLayer('https://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
+	    subdomains:['mt0','mt1','mt2','mt3'],
+            attribution: 'Imagery &copy; 2021 Google, Map data &copy; 2021 <a target="_blank" href="https://www.google.com/intl/en_uk/help/terms_maps/">Terms</a>',
+            maxNativeZoom: 18,
+	    maxZoom: 22
+        });
+	
+	var surface = L.tileLayer('https://geoffrowland.github.io/Surface-Street/{z}/{x}/{y}.png', {
+	    tms: true, 
+	    opacity: 1.0,
+	    maxNativeZoom: 18,	
+	    maxZoom: 20,
+	    minZoom: 12,
+	    attribution: 'LiDAR 1m DSM Environment Agency OGL &copy; Crown Copyright 2021'
+        });
+	
 	var marker = L.marker([51.14471, -2.69866]).addTo(mymap);   
 	marker.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();	
 	
