--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
     <link rel="stylesheet" href="L.Control.MousePosition.css">
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
-    <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
+    //<script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
 	
 </head>
 <body>
-
-
 
 <div id="mapid" style="width: 100%; height: 800px;"></div>
 <script>
@@ -52,13 +50,16 @@
 	    attribution: 'LiDAR 1m DSM Environment Agency OGL &copy; Crown Copyright 2021'
         });
 	
-	var marker = L.marker([51.14471, -2.69866]).addTo(mymap);   
-	marker.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();	
+	var tor = L.marker([51.14471, -2.69866]).addTo(mymap);   
+	tor.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();	
 	
-	var college = L.marker([51.129852, -2.7334955]).addTo(mymap);
-	college.bindPopup("<b>C Block</b><br>Strode College").openPopup();
+	var cBlock = L.marker([51.129852, -2.7334955]).addTo(mymap);
+	cBlock.bindPopup("<b>C Block</b><br>Strode College").openPopup();
 	
-	//var college1 = L.marker([51.129952, -2.7334955]).addTo(mymap);
+	var college1 = L.marker([51.129952, -2.7334955]).addTo(mymap);
+	college.bindPopup("<b>College1</b><br>Strode College").openPopup();
+	
+	var college = L.layerGroup([cblock, college1]);
       
 	var baseMaps = {
            "OSM ": osm,
@@ -67,10 +68,9 @@
 	
         var overlayMaps = {
 	    "Surface": surface,
-            "Marker": marker,
+            "Tor": tor
             "College": college
        };
-	
 
        L.control.layers(baseMaps, overlayMaps).addTo(mymap);
 	
@@ -78,8 +78,6 @@
 	L.control.mousePosition().addTo(mymap);
 
 </script>
-
-
 
 </body>
 </html>
