--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	
         var overlayMaps = {
 	    "Surface": surface,
-            "Tor": tor
+            "Tor": tor,
             "College": college
        };
 
