--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 	var tor = L.marker([51.14471, -2.69866]).addTo(mymap);   
 	tor.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();	
 	
-	var cBlock = L.marker([51.129852, -2.7334955]);
+	var cBlock = L.marker([51.12985, -2.733495]);
 	cBlock.bindPopup("<b>C Block</b><br>Strode College").openPopup();
 	
-	var eBlock = L.marker([51.129955, -2.7334956]);
+	var eBlock = L.marker([51.12995, -2.73306]);
 	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
 	
 	var college = L.layerGroup([cBlock, eBlock]).addTo(mymap);
