--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
         });
 	
 	var tor = L.marker([51.14471, -2.69866]).addTo(mymap);   
-	tor.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();	
+	tor.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();
+	
+	var aBlock = L.marker([51.13029, -2.73303]);
+	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
+	
+	var SwimmingPool = L.marker([51.12929, -2.73294]);
+	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
+	
+	var bBlock = L.marker([51.13047, -2.73402]);
+	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
 	
 	var cBlock = L.marker([51.12985, -2.733495]);
 	cBlock.bindPopup("<b>C Block</b><br>Strode College").openPopup();
@@ -59,7 +68,11 @@
 	var eBlock = L.marker([51.12969, -2.73260]);
 	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
 	
-	var college = L.layerGroup([cBlock, eBlock]).addTo(mymap);
+	var jBlock = L.marker([51.12969, -2.73260]);
+	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
+	
+	var eBlock = .marker([51.12969, -2.73260]);
+	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
       
 	var baseMaps = {
            "OSM": osm,
