--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	var jBlock = L.marker([51.12969, -2.73260]);
 	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
 	
-	var eBlock = .marker([51.12969, -2.73260]);
+	var eBlock = L.marker([51.12969, -2.73260]);
 	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
       
 	var baseMaps = {
