--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 	tor.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();
 	
 	var aBlock = L.marker([51.13029, -2.73303]);
-	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
+	eBlock.bindPopup("<b>A Block</b><br>Strode College").openPopup();
 	
 	var bBlock = L.marker([51.13047, -2.73402]);
-	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
+	eBlock.bindPopup("<b>B Block</b><br>Strode College").openPopup();
 	
 	var cBlock = L.marker([51.12985, -2.733495]);
 	cBlock.bindPopup("<b>C Block</b><br>Strode College").openPopup();
@@ -66,10 +66,10 @@
 	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
 	
 	var jBlock = L.marker([51.12969, -2.73260]);
-	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
+	eBlock.bindPopup("<b>J Block</b><br>Strode College").openPopup();
 	
-	var eBlock = L.marker([51.12969, -2.73260]);
-	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
+	var mBlock = L.marker([51.12969, -2.73260]);
+	eBlock.bindPopup("<b>M Block</b><br>Strode College").openPopup();
       
 	var baseMaps = {
            "OSM": osm,
