--- a/index.html
+++ b/index.html
@@ -53,25 +53,23 @@
 	var tor = L.marker([51.14471, -2.69866]).addTo(mymap);   
 	tor.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();
 	
-	var aBlock = L.marker([51.13029, -2.73303]);
+	var aBlock = L.marker([51.13029, -2.73303]).addTo(mymap);
 	eBlock.bindPopup("<b>A Block</b><br>Strode College").openPopup();
 	
-	var bBlock = L.marker([51.13047, -2.73402]);
+	var bBlock = L.marker([51.13047, -2.73402]).addTo(mymap);
 	eBlock.bindPopup("<b>B Block</b><br>Strode College").openPopup();
 	
-	var cBlock = L.marker([51.12985, -2.733495]);
+	var cBlock = L.marker([51.12985, -2.733495]).addTo(mymap);
 	cBlock.bindPopup("<b>C Block</b><br>Strode College").openPopup();
 	
-	var eBlock = L.marker([51.12969, -2.73260]);
+	var eBlock = L.marker([51.12969, -2.73260]).addTo(mymap);
 	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
 	
-	var jBlock = L.marker([51.12948, -2.73207]);
+	var jBlock = L.marker([51.12948, -2.73207]).addTo(mymap);
 	eBlock.bindPopup("<b>J Block</b><br>Strode College").openPopup();
 	
-	var mBlock = L.marker([51.12965, -2.73257]);
+	var mBlock = L.marker([51.12965, -2.73257]).addTo(mymap);
 	eBlock.bindPopup("<b>M Block</b><br>Strode College").openPopup();
-      
-	});
 	
 	var baseMaps = {
            "OSM": osm,
