--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 	tor.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();
 	
 	var aBlock = L.marker([51.13029, -2.73303]).addTo(mymap);
-	eBlock.bindPopup("<b>A Block</b><br>Strode College").openPopup();
+	aBlock.bindPopup("<b>A Block</b><br>Strode College").openPopup();
 	
 	var bBlock = L.marker([51.13047, -2.73402]).addTo(mymap);
-	eBlock.bindPopup("<b>B Block</b><br>Strode College").openPopup();
+	bBlock.bindPopup("<b>B Block</b><br>Strode College").openPopup();
 	
 	var cBlock = L.marker([51.12985, -2.733495]).addTo(mymap);
 	cBlock.bindPopup("<b>C Block</b><br>Strode College").openPopup();
@@ -66,10 +66,10 @@
 	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
 	
 	var jBlock = L.marker([51.12948, -2.73207]).addTo(mymap);
-	eBlock.bindPopup("<b>J Block</b><br>Strode College").openPopup();
+	jBlock.bindPopup("<b>J Block</b><br>Strode College").openPopup();
 	
 	var mBlock = L.marker([51.12965, -2.73257]).addTo(mymap);
-	eBlock.bindPopup("<b>M Block</b><br>Strode College").openPopup();
+	mBlock.bindPopup("<b>M Block</b><br>Strode College").openPopup();
 	
 	var baseMaps = {
            "OSM": osm,
