--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
 	tor.bindPopup("<img style='width: 300px' src='tor.jpg'/><br /><b>Glastonbury Tor</b>").openPopup();
 	
 	var aBlock = L.marker([51.13029, -2.73303]).addTo(mymap);
-	aBlock.bindPopup("<b>A Block</b><br>Strode College").openPopup();
+	aBlock.bindPopup("<img style='width: 300px' src='aBlock.jpg'/><b>A Block</b><br>Strode College").openPopup();
 	
 	var bBlock = L.marker([51.13047, -2.73402]).addTo(mymap);
-	bBlock.bindPopup("<b>B Block</b><br>Strode College").openPopup();
+	bBlock.bindPopup("<img style='width: 300px' src='bBlock.jpg'/><b>B Block</b><br>Strode College").openPopup();
 	
 	var cBlock = L.marker([51.12985, -2.733495]).addTo(mymap);
-	cBlock.bindPopup("<b>C Block</b><br>Strode College").openPopup();
+	cBlock.bindPopup("<img style='width: 300px' src='cBlock.jpg'/><b>C Block</b><br>Strode College").openPopup();
 	
 	var eBlock = L.marker([51.12922, -2.73189]).addTo(mymap);
-	eBlock.bindPopup("<b>E Block</b><br>Strode College").openPopup();
+	eBlock.bindPopup("<img style='width: 300px' src='eBlock.jpg'/><b>E Block</b><br>Strode College").openPopup();
 	
 	var jBlock = L.marker([51.12948, -2.73207]).addTo(mymap);
-	jBlock.bindPopup("<b>J Block</b><br>Strode College").openPopup();
+	jBlock.bindPopup("<img style='width: 300px' src='jBlock.jpg'/><b>J Block</b><br>Strode College").openPopup();
 	
 	var mBlock = L.marker([51.12965, -2.73257]).addTo(mymap);
-	mBlock.bindPopup("<b>M Block</b><br>Strode College").openPopup();
+	mBlock.bindPopup("<img style='width: 300px' src='mBlock.jpg'/><b>M Block</b><br>Strode College").openPopup();
 	
 	var baseMaps = {
            "OSM": osm,
